--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,9 @@
 		<jar jarfile="${wowza.lib.dir}/${jar.filename}">
 			<fileset dir="${core.build.dir}"/>
 		</jar>
+		<jar jarfile="jar/${jar.filename}">
+			<fileset dir="${core.build.dir}"/>
+		</jar>
 	</target>
 	
 </project>
