save the jar for publishing to production

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<project name="infrno_wowza" default="jar" basedir="..">
+<project name="sage" default="jar" basedir=".">
 	
-	<property name="wowza.lib.dir" value="/Library/WowzaMediaServer/lib"/>
+	<property name="wowza.lib.dir" value="C:\Program Files\Wowza Media Systems\Wowza Media Server 2\lib"/>
 	<property name="jar.filename" value="infrno_wowza.jar"/>
 	<property name="core.build.dir" value="bin"/>
 
