--- a/.classpath
+++ b/.classpath
@@ -2,138 +2,116 @@
 <classpath>
 	<classpathentry kind="src" output="bin" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/bcprov-ext-jdk15-143.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/hirevue_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/home_book_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/huddle_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/huddle_wowza_streamer.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/jid3lib-0.5.4.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/jspeex.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/mbean_test_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/mysql-connector-java-5.1.10-bin.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/tokbox_vmail.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/tokbox_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/tokbox_wowza_bandwidth.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-ant.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/bcprov-ext-jdk15-143.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/jid3lib-0.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/MyFirstPlugin.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/test1.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-ant.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-bootstrap.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-bootstrap.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-commons-modeler.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-commons-modeler.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-core.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-core.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-httpstreamer-cupertinostreaming.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-httpstreamer-cupertinostreaming.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-httpstreamer-smoothstreaming.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-httpstreamer-smoothstreaming.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-jlayer.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-jlayer.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-mediareader-flv.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-mediareader-flv.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-mediareader-h264.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-mediareader-h264.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-mediareader-mp3.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-mediareader-mp3.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-mediawriter-flv.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-mediawriter-flv.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-mediawriter-h264.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-mediawriter-h264.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-plugin-bwcheck.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-plugin-bwcheck.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-plugin-flashremoting.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-plugin-textchat.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-plugin-integrationrecord.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-server.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-plugin-livestreamrecord.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-file.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-server.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-live.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-file.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-publish.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-live.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-record.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-publish.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-rtp.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-record.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Wowza Media Systems/Wowza Media Server 2/lib/wms-stream-shoutcast.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Wowza Media Systems/Wowza Media Server 2/documentation/serverapi"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-rtp.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wms-stream-shoutcast.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Library/WowzaMediaServer/documentation/serverapi"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/woome_shuffle_people_match_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/woome_shuffle_people_stream_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/woome_shuffle_people_wowza.jar"/>
-	<classpathentry kind="lib" path="/Library/WowzaMediaServer/lib/wowza_connection_params.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
